Remove deprecated boxed primitive constructors in some test classes