@@ -143,7 +143,7 @@ public class TestMultiParallel {
       byte[] k = starterKeys[kIdx];
       byte[] cp = new byte[k.length + 1];
       System.arraycopy(k, 0, cp, 0, k.length);
-      cp[k.length] = new Integer(i % 256).byteValue();
+      cp[k.length] = Integer.valueOf(i % 256).byteValue();
       keys.add(cp);
     }
 
@@ -156,7 +156,7 @@ public class TestMultiParallel {
       byte[] k = starterKeys[kIdx];
       byte[] cp = new byte[k.length + 1];
       System.arraycopy(k, 0, cp, 0, k.length);
-      cp[k.length] = new Integer(i % 256).byteValue();
+      cp[k.length] = Integer.valueOf(i % 256).byteValue();
       keys.add(cp);
     }
     return keys.toArray(new byte[][] { new byte[] {} });
